* Bugfix: Fixed Chrome Layout Bug

--- a/asset/css/calendarbody.scss
+++ b/asset/css/calendarbody.scss
@@ -78,7 +78,7 @@
 }
 
 .timeSpacer {
-	width:29px;
+	width: 4.5%;
 }
 .dayEvents {
 	background-color:$white;
@@ -87,7 +87,7 @@
 		left:1px solid $colorCorporate04;
 	}
 
-	table {
+		table {
 		table-layout:fixed;
 		width:100%;
 	}
